--- a/.gitignore
+++ b/.gitignore
@@ -138,4 +138,8 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+# My Ignore File
+database.properties
+target/
+
 # End of https://www.toptal.com/developers/gitignore/api/windows,eclipse,java,maven
