--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,17 @@
 		<org.slf4j-version>1.6.6</org.slf4j-version>
 	</properties>
 	<dependencies>
+		
+		
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+			<!-- 자바를 json으로 변경시켜줌 -->
+			<dependency>
+			    <groupId>com.fasterxml.jackson.core</groupId>
+			    <artifactId>jackson-databind</artifactId>
+			    <version>2.13.4</version>
+			</dependency>
+		
+	
 		<!-- file upload -->
 		  <!-- commons-fileupload -->
 	      <dependency>
