--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -24,6 +24,25 @@
 		<param-value>/WEB-INF/spring/*-context.xml</param-value>
 	</context-param>
 	
+	
+	<error-page>
+		<error-code>404</error-code>
+		<location>/WEB-INF/views/errors/error_404.jsp</location> <!-- 직접 jsp경로 써주기 -->
+	</error-page>
+	<error-page>
+		<error-code>405</error-code>
+		<location>/WEB-INF/views/errors/error_404.jsp</location> <!-- 직접 jsp경로 써주기 -->
+	</error-page>
+	
+	<error-page>
+		<error-code>400</error-code>
+		<location>/error/error404</location> <!-- controller로 요청 url보내버리기 -->
+	</error-page>
+	
+	<error-page>
+		<error-code>500</error-code>
+		<location>/error/error500</location>
+	</error-page>
 	<!-- Creates the Spring Container shared by all Servlets and Filters -->
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
